; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_amdkfd.c_amdgpu_amdkfd_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdgpu/extr_amdgpu_amdkfd.c_amdgpu_amdkfd_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sysinfo = type { i64, i64, i64 }

@amdgpu_amdkfd_total_mem_size = common dso_local global i64 0, align 8
@ENOENT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @amdgpu_amdkfd_init() #0 {
  %1 = alloca %struct.sysinfo, align 8
  %2 = alloca i32, align 4
  %3 = call i32 @si_meminfo(%struct.sysinfo* %1)
  %4 = getelementptr inbounds %struct.sysinfo, %struct.sysinfo* %1, i32 0, i32 2
  %5 = load i64, i64* %4, align 8
  %6 = getelementptr inbounds %struct.sysinfo, %struct.sysinfo* %1, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = sub nsw i64 %5, %7
  store i64 %8, i64* @amdgpu_amdkfd_total_mem_size, align 8
  %9 = getelementptr inbounds %struct.sysinfo, %struct.sysinfo* %1, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @amdgpu_amdkfd_total_mem_size, align 8
  %12 = mul nsw i64 %11, %10
  store i64 %12, i64* @amdgpu_amdkfd_total_mem_size, align 8
  %13 = load i32, i32* @ENOENT, align 4
  %14 = sub nsw i32 0, %13
  store i32 %14, i32* %2, align 4
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @si_meminfo(%struct.sysinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
